--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,17 @@
 
 language: elixir
-
+elixir:
+  - 1.0.0
+  - 1.0.1
+  - 1.0.2
+  - 1.0.3
 otp_release:
   - 17.0
-
+  - 17.1
+  - 17.4
+sudo: false 
+script:
+  - mix test.all
+notifications:
+  recipients:
+    - leej@librely.com
